Add transparency route to project

--- a/src/locale/base.json
+++ b/src/locale/base.json
@@ -7,6 +7,8 @@
   "backText": "Back",
   "searchTitle": "Filter page prototype",
   "searchLink": "/filter",
+  "transparencyTitle": "Transparency reporting prototype",
+  "transparencyLink": "/transparency",
   "orderTitle": "Ordering page prototype",
   "orderLink": "/order",
   "dashboardTitle": "Dashboard / report page prototype",
