Update content using baselocale, add new designs to transparency report prototype

--- a/src/locale/base.json
+++ b/src/locale/base.json
@@ -1,17 +1,30 @@
 {
-  "projectTitle": "BEIS ODART Tracker",
+  "projectTitle": "BEIS ODART Alpha",
+  "projectTitleTwo": "Technical Prototypes",
   "projectSubtitle": "This is the BEIS ODART tracker alpha. This is a prototype that will be used as a proof of concept for a replacement service for the current spreadsheet based tracker service.",
   "notFoundTitle": "Page not found",
   "notFoundSubtitle": "This page cannot be found.",
-  "homeHeaderTwo": "Prototypes",
   "backText": "Back",
-  "searchTitle": "Filter page prototype",
-  "searchLink": "/filter",
-  "transparencyTitle": "Transparency reporting prototype",
+  "filterTitle": "Filter page prototype",
+  "filterLink": "/filter",
+  "recordTitle": "Matching records",
+  "pageTitle": "Page",
+  "transparencyTitle": "IATI transparency report",
   "transparencyLink": "/transparency",
-  "dashboardTitle": "Dashboard / report page prototype",
-  "dashboardLink": "/dashboard",
-  "dashboardPageTitle": "Exported Report",
+  "transparencySubtitle": "Status of submissions",
+  "transparencyBodyContent": "34 of 36 submissions are completed",
+  "reportTitle": "Report page prototype",
+  "reportLink": "/report",
+  "reportPageTitle": "Exported Report",
   "totalGross": "Total spend: £",
-  "keywordSearch": "Search by keyword:"
+  "keywordSearch": "Search by keyword:",
+  "generateReport": "Generate report",
+  "reportCaptionHeader": "Relevant Quarter",
+  "reportSubcaptionHeader": "2017-2018 Q3",
+  "reportBlock1Header": "Actual spend",
+  "reportBlock1Content": "£470,850",
+  "reportBlock2Header": "Budget difference",
+  "reportBlock2Content": "-£67,950",
+  "reportBlock3Header": "",
+  "reportBlock3Content": ""
 }
